# connmap

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  release.yml
adr/0001-record-architecture-decisions/: index.html
adr/0002-static-only-and-stack/: index.html
adr/0003-self-contained-html/: index.html
api/: index.html
cli/: index.html
decisions/: index.html
docs/: api.md  cli.md  decisions.md  example.md  importers.md  index.md  threat-catalog.md  trust-taxonomy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-static-only-and-stack.md  0003-self-contained-html.md
example/: index.html
examples/: README.md  mcp-vulnerable.json  openclaw-hardened.json  openclaw-vulnerable.json
importers/: index.html
search/: search_index.json
src/connmap/: __init__.py  __main__.py  cli.py
src/connmap/engine/: __init__.py  detect.py  findings.py  narrate.py  paths.py
src/connmap/importers/: __init__.py  base.py  mcp.py  openclaw.py  tools.py
src/connmap/model/: __init__.py  connector.py  graph.py  trust.py
src/connmap/policy/: __init__.py  generate.py  models.py
src/connmap/render/: __init__.py  html.py
src/connmap/render/assets/: app.js  styles.css
src/connmap/report/: __init__.py  console.py  json_report.py  sarif.py
tests/: test_cli.py  test_cli_commands.py  test_connector.py  test_engine.py  test_graph.py  test_importers.py  test_policy.py  test_render.py  test_reporters.py  test_trust.py
threat-catalog/: index.html
trust-taxonomy/: index.html
