[project]
name = "connmap"
version = "0.1.0"
description = "Data-flow threat mapping for local AI-assistant connectors"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Tom Price", email = "tomprice13@pm.me" }]
keywords = [
    "security",
    "threat-modeling",
    "ai-agents",
    "mcp",
    "data-flow",
    "confused-deputy",
    "least-privilege",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "networkx>=3.3",
    "typer>=0.12",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/Lonkins/connmap"
Repository = "https://github.com/Lonkins/connmap"
Issues = "https://github.com/Lonkins/connmap/issues"
Documentation = "https://lonkins.github.io/connmap/"

[project.scripts]
connmap = "connmap.cli:app"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connmap"]

[tool.hatch.build.targets.sdist]
include = ["src/connmap", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "PTH",              # use pathlib
    "TID",              # tidy imports
]
ignore = [
    "N818",  # exception naming; our error names are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["connmap"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
